Fix scroll overflow 🥃

--- a/public/style.css
+++ b/public/style.css
@@ -3,6 +3,7 @@ html {
   height: 100%;
   margin: 0;
   background-color: black;
+  overflow: hidden;
 }
 
 canvas {
